# DL2MI_TP

./: .gitignore  LICENSE  README.md
Info211_Java/TP1/ImageDenoisingSkel/src/: ImageDenoisingSkel.java
Info211_Java/TP2/: BuildLexicon.java
Info211_Java/TP2/BuildLexicon/src/: BuildLexicon.java  MapUtil.java
Info211_Java/TP3/src/: DynamicSet.java  StaticSet.java  TestSet.java  TestVector.java  Vector.java
Info211_Java/TP4/src/main/: Boid.java  BoidGUI.java  Flock.java  OneBoidGUI.java  RandomBoid.java  RandomGUI.java  (+1 more)
Info215_ApprAuto/TP1/: .gitignore  readme.md  sep.d
Info215_ApprAuto/perceptron/: sep.d
Info216_InfoGraphique/IG-Algo-TP1/: .gitignore  ig  main.cpp  window.cpp
Info216_InfoGraphique/IG-Algo-TP2/: .gitignore  Makefile  README.md  ig  main.cpp  object.cpp  window.cpp
Info216_InfoGraphique/IG-Algo-TP3/: .gitignore  BUILD_RUN.sh  ig  main.cpp  object.cpp  window.cpp
Info216_InfoGraphique/IG-Algo-TP4/: ig  main.cpp  object.cpp  object.hpp  project_TP4.cbp  project_TP4.layout  window.cpp  window.hpp  window_bak.cpp
Info216_InfoGraphique/main1/: CMakeLists.txt  main1  main1.cpp  odlcmake.txt
Info216_InfoGraphique/main2/: CMakeLists.txt  main2.cpp
Info216_InfoGraphique/main3/: main3.cpp
Info221_Archi/: tp2_code1.s  tp2_code3.s  tp2_code4.s
Math208_Python/TP2/: .gitignore  TP2.py
Math208_Python/TP3/: TP3_A.ipynb  TP3_B.ipynb  TP_Semaine4-etud.ipynb
Math208_Python/TP3/.ipynb_checkpoints/: TP3_A-checkpoint.ipynb
Math208_Python/TP_Semaine6/: TP_Semaine6.ipynb
Math208_Python/TP_Semaine6/.ipynb_checkpoints/: TP_Semaine6-checkpoint.ipynb
(+6 files in other folders)
